# Deezy

./: .gitignore  BUGS.md  CHANGELOG.md  FAQ.md  README.md  TASKS.md  create-release.ps1  create-release.sh  main.py  package.json  requirements.txt
deezy/: package.json  tsconfig.json
deezy/example-themes/: README.md  cherry_blossom.json  crimson_red.json  cyber_neon.json  forest_green.json  golden_amber.json  midnight_blue.json  ocean_teal.json  purple_haze.json  rose_pink.json  slate_gray.json  sunset_orange.json
deezy/src/: app.css  app.html
deezy/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
deezy/src-tauri/capabilities/: default.json
deezy/src-tauri/icons/: icon.icns
deezy/src-tauri/keys/: updater.key.pub
deezy/src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  themes.rs  tray.rs
deezy/src-tauri/src/deezer/: crypto.rs  download.rs  mod.rs  models.rs
deezy/src/lib/: audioPlayer.ts  downloadQueue.ts  keyboardShortcuts.ts  notifications.ts  rateLimiter.ts  stores.ts  tray.ts
deezy/src/lib/components/: DownloadsView.svelte  ExportHistoryModal.svelte  KeyboardShortcutsModal.svelte  LyricsModal.svelte  MiniPlayer.svelte  QueueView.svelte  SearchView.svelte  SettingsView.svelte  Sidebar.svelte  TagEditorModal.svelte  ThemeManager.svelte  UpdateModal.svelte
deezy/src/lib/i18n/: formatters.ts  index.ts
deezy/src/lib/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  pt.json
deezy/src/routes/: +layout.svelte  +page.svelte
pydeezer/: Deezer.py
