[package]
name = "deezy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "deezy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
md5 = "0.7"
aes = "0.8"
blowfish = "0.9"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
id3 = "1"
metaflac = "0.2"

