[package]
name = "deezy"
version = "0.2.14"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "deezy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
md5 = "0.7"
aes = "0.8"
blowfish = "0.9"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
id3 = "1"
metaflac = "0.2"
image = "0.25"
keyring = { version = "3", features = ["sync-secret-service", "windows-native"] }
regex = "1"
lazy_static = "1.4"

